# us-used-vehicle-resales

./: .gitignore  BACKLOG.md  CLAUDE.md  DATA_DICTIONARY.md  PROCESS_LOG.md  README.md  ROADMAP.md  infos.md  pyproject.toml
.claude/: launch.json
docs/: data-dictionary.txt
notebooks/: 00_introducing.ipynb  00_introduction.ipynb  02_processing.ipynb  03_modelling-LogReg.ipynb  03_modelling-RF.ipynb  03_modelling-prep.ipynb  03_modelling.ipynb  03a_modelling-logreg.ipynb  04_evaluation-BaseLogReg.ipynb  04_evaluation-LogReg.ipynb  04b_evaluation-logreg.ipynb  Data-Dictionary.html  Data-Dictionary.ipynb  EDA_Summary_Kategorien.txt  Workflow.ipynb
reports/: index.html
src/: cleaning.py  config_models_catalog.py  features.py  utils_tracker.py
src/us_used_vehicle_resales/: __init__.py  cleaning.py  config_features_catalog.py  inspect.py  process.py  sampling.py  utils.py  utils_export.py  viz.py
src/wgnd/: cleaning.py  inspect-alt.py  inspect.txt  models.py  printing.py  process.py
