# pyproject.toml
# --------------
# Zentrale Projektkonfiguration: Metadaten, Dependencies, Build-System, Tool-Settings.
# uv liest diese Datei direkt – keine requirements.txt nötig.
#
# Setup (einmalig, nach dem Klonen):
#   uv venv                          → erstellt .venv/
#   source .venv/bin/activate        → Umgebung aktivieren (Mac/Linux)
#   uv pip install -e .              → installiert Dependencies + dieses Paket
#   uv pip install -e ".[dev]"       → zusätzlich Dev-Tools (pytest, ruff, …)

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "us_used_vehicle_resales"
version     = "0.1.0"
description = "US Used Vehicle Resales – Bad-Buy Classification (DSC)"
requires-python = ">=3.10"

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "scikit-learn>=1.3",
  "jupyter>=1.0",
  "ipykernel>=6.0",
  "joblib>=1.3",
  "pyarrow>=14.0",
  "rich>=13.0",
  "wgnd @ git+https://github.com/kaywiegand/wgnd-toolkit.git@main",
]

[project.optional-dependencies]
# Das Projekt nutzt aktuell ausschliesslich scikit-learn (LogReg, RandomForest,
# HistGradientBoosting, …) — alle Laufzeit-Abhängigkeiten stehen in [dependencies].
dev = [
  "pytest>=7.0",
  "ruff>=0.1",
  "black>=23.0",
  "nbstripout>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length    = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
exclude     = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401", "F403", "F405", "E402"]
